--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
 </head>
 <body>
 
-    <div id="test"></div>
-    <div id="test2"></div>
-    <div id="test3"></div>
+    <div id="show"></div>
 
     <script src="main.js"></script>
+    
 </body>
 </html>
