--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 <body>
 
     <div id="show"></div>
+    <div id="show2"></div>
+    <div id="show3"></div>
 
     <script src="main.js"></script>
-    
+
 </body>
 </html>
